# pneuma-court-p2p

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
abi/: CourtEscrow.json  PneumaCourt.json  SoulNFT.json
claw-skill/: README.md  SKILL.md  clawhub.yaml  package.json
contracts/src/: CourtEscrow.sol
docs/: architecture.md  joining-as-juror.md  onchain-bonus.md  pneuma-court-on-arc.md  protocol-flow.md
examples/: brain_court_demo.py  case-content-quality.json  case-economic-dispute.json  escrow_lifecycle.py  run_case.py  shell_flow_via_task.py  tba_signed_lifecycle.py  x402_real_money_demo.py
scripts/: demo.sh  fix-public-reachability.md  four-node.sh  install.sh  keepalive-public-services.sh  mint-juror-souls.sh  register-with-anet.sh  serve-public-court.sh  verify-public-mesh.sh
src/court_agent/: __init__.py  _anet_client.py  _register.py  chain.py  chain_pneuma.py  escrow.py  escrow_service.py  identity_service.py  main.py  manifest_service.py  proxy.py  tba.py  verdict.py  x402_rail.py
src/court_agent/jurors/: __init__.py  _runner.py  cli.py  economic.py  fairness.py  legal.py
